objects/EZProtectLog__c.object
<CustomObject>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Scan_Enqueued_TS__c</fullName>
        <description>The time the file was discovered by EZProtect.</description>
        <label>Scan Enqueued TS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scan_Reported_TS__c</fullName>
        <description>This is the time that the results are written out.</description>
        <label>Scan Reported TS</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EZProtect_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Id__c</fullName>
        <externalId>true</externalId>
        <label>Target Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Name__c</fullName>
        <label>Target Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Owner_ID__c</fullName>
        <label>Target Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Type__c</fullName>
        <label>Target Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EZProtect Log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EZProtect Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Target_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>status__c</columns>
        <columns>NAME</columns>
        <columns>Target_Type__c</columns>
        <columns>Target_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>